fix: hide horizontal overflow

--- a/rs-css/src/styles.css
+++ b/rs-css/src/styles.css
@@ -3,12 +3,9 @@ body {
   font-family: 'Martian Mono', monospace;
   color: white;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .btn {
   font-family: 'Martian Mono', monospace;
 }
-
-
-
-
